refactor/ reduce-FileWithIncomes-and-FileWithExpenses-to-one-class-FileWithOperations

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ BudgetApp.cbp
 BudgetApp.uxf
 functions_MMalek.txt
 Users.xml
-Incomes.xml
-Expenses.xml
+Operations.xml
 bin/
 obj/
 BudgetApp.layout
